5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1836_2602.log
== TEST (2019-06-24 12:39:45) 
-- CODE:
from numpy import *
from numpy.linalg import *

gramas = array(eval(input("Insira a qtd de alimento: ")))
alimento = zeros(3, 3)
print(alimento)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:40:19) 
-- CODE:
from numpy import *
from numpy.linalg import *

gramas = array(eval(input("Insira a qtd de alimento: ")))
alimento = zeros((3, 3))
print(alimento)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 21:07:20) 
-- CODE:
from numpy import *
from numpy.linalg import *

gramas = array(eval(input("Insira a qtd de alimento: ")))

alimento = [[2, 1, 4], [1, 2, 0], [2, 3, 2]]

print (alimento)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 22:20:19) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])

t = g * a
print (t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 22:25:55) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])

t = g * a
print (t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 22:31:21) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])

t = g/  a
print (t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 22:38:32) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t = a*(inv (g))
print (t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 22:47:50) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t = g *inv (a)
print (t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 22:48:48) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t = g *(a.T)
print (t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-29 22:50:37) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t = g *(a.T)
print (t)
-- EXECUTION TIME:
1.24718
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
[[ 7910.5   5652.36 17124.44]
 [ 3955.25 11304.72 25686.66]
 [15821.       0.   17124.44]]
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
[[ 4191.04  1855.75 22590.42]
 [ 2095.52  3711.5  33885.63]
 [ 8382.08     0.   22590.42]]
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
[[17192.28  3212.68  5304.22]
 [ 8596.14  6425.36  7956.33]
 [34384.56     0.    5304.22]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 22:51:04) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t = g *(a.T)
print (t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 22:54:32) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t = g *inv (a)

print (t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 22:58:32) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t = dot (inv (a),g)

print (t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:00:29) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t = g*a

print (t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:03:42) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t = g*a

print (t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:04:39) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t = dot (g, a)

print (t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:07:58) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t = g*inv (a)
e=sum (t [0:4])
s=sum (t [4:8])
c=sum (t [8:])

print (e,s,c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:09:13) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t = g*inv (a)
e=sum (t [0:4])
s=sum (t [4:8])
c=sum (t [8:])

print (t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:10:42) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t = a*inv (t)
e=sum (t [0:4])
s=sum (t [4:8])
c=sum (t [8:])

print (t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:11:38) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t = a*inv (g)
e=sum (t [0:4])
s=sum (t [4:8])
c=sum (t [8:])

print (t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:12:22) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t = g*

print (t)
-- ERROR:
File "XXXX", line 7
    t = g*
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:13:08) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t = trans (g)*a

print (t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:13:41) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t =(g.T)*a

print (t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:14:30) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t =a*(g.T)

print (t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:20:10) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t =g*inv (a)

print (t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:22:03) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t =g*inv (a)
e = sum (t [0:])
s = sum (t [1:])
c = sum (t [2:])
print (e)
print (s)
print (c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:22:37) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t =g*inv (a)
e = sum (t [0:])
s = sum (t [1:])
c = sum (t [2:])
print (e)
print (s)
print (c)
print (t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:26:24) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t =g*inv (a)
e = sum (t[0,:])
s = sum (t [1,:])
c = sum (t [2,:])
print (e)
print (s)
print (c)
print (t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:29:04) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t =g*inv (a)
e = sum (t[0,:])
s = sum (t [1,:])
c = sum (t [2,:])
print ("estafilococo:",e)
print ("salmonela:",s)
print ("coli:",c)
m = t [min (t)]
print (m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:29:40) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t =g*inv (a)
e = sum (t[0,:])
s = sum (t [1,:])
c = sum (t [2,:])
print ("estafilococo:",e)
print ("salmonela:",s)
print ("coli:",c)
m = min(t)
print (m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:30:21) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t =array (g*inv (a))
e = sum (t[0,:])
s = sum (t [1,:])
c = sum (t [2,:])
print ("estafilococo:",e)
print ("salmonela:",s)
print ("coli:",c)
m = min(t)
print (m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:31:22) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t =array (g*inv (a))
e = sum (t[0,:])
s = sum (t [1,:])
c = sum (t [2,:])
print ("estafilococo:",e)
print ("salmonela:",s)
print ("coli:",c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:32:27) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t =array (g*inv (a))
e = sum (t[0,:])
s = sum (t [1,:])
c = sum (t [2,:])
print ("estafilococo:",e)
print ("salmonela:",s)
print ("coli:",c)
v2 = array ([e,s,c])
print (v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:33:15) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t =array (g*inv (a))
e = sum (t[0,:])
s = sum (t [1,:])
c = sum (t [2,:])
print ("estafilococo:",e)
print ("salmonela:",s)
print ("coli:",c)
v2 = array ([e,s,c])
m = min (v2)
print (m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:38:25) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t =array (g*inv (a))
e = sum (t[0,:])
s = sum (t [1,:])
c = sum (t [2,:])
print ("estafilococo:",e)
print ("salmonela:",s)
print ("coli:",c)
v2 = array ([e,s,c])
m = min (v2)
for i in range (v2):
   if (m == v2 [i]):
      h = v2 [i]
if (h == 0):
    print ("estafilococo")
elif(h == 1):
    print ("salmonela")
elif (h == 2):
    print ("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:40:07) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t =array (g*inv (a))
e = sum (t[0,:])
s = sum (t [1,:])
c = sum (t [2,:])
print ("estafilococo:",e)
print ("salmonela:",s)
print ("coli:",c)
v2 = array ([e,s,c])
m = min (v2)
for i in range (size (v2)):
   if (m == v2 [i]):
      h = v2 [i]
if (h == 0):
    print ("estafilococo")
elif(h == 1):
    print ("salmonela")
elif (h == 2):
    print ("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:41:18) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t =array (g*inv (a))
e = sum (t[0,:])
s = sum (t [1,:])
c = sum (t [2,:])
print ("estafilococo:",e)
print ("salmonela:",s)
print ("coli:",c)
v2 = array ([e,s,c])
m = min (v2)
for i in range (size (v2)):
   if (m == v2 [i]):
      h = v2 [i]
print (h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:42:00) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t =array (g*inv (a))
e = sum (t[0,:])
s = sum (t [1,:])
c = sum (t [2,:])
print ("estafilococo:",e)
print ("salmonela:",s)
print ("coli:",c)
v2 = array ([e,s,c])
m = min (v2)
for i in range (size (v2)):
   if (m == v2 [i]):
      h = i
print (i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:42:34) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t =array (g*inv (a))
e = sum (t[0,:])
s = sum (t [1,:])
c = sum (t [2,:])
print ("estafilococo:",e)
print ("salmonela:",s)
print ("coli:",c)
v2 = array ([e,s,c])
m = min (v2)
for i in range (size (v2)):
   if (m == v2 [i]):
      h = i
print (v2 [i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:43:03) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t =array (g*inv (a))
e = sum (t[0,:])
s = sum (t [1,:])
c = sum (t [2,:])
print ("estafilococo:",e)
print ("salmonela:",s)
print ("coli:",c)
v2 = array ([e,s,c])
m = min (v2)
for i in range (size (v2)):
   if (m == v2 [i]):
      h = i
print (v2 [h])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:45:26) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t =array (g*inv (a))
e = sum (t[0,:])
s = sum (t [1,:])
c = sum (t [2,:])
print ("estafilococo:",e)
print ("salmonela:",s)
print ("coli:",c)
v2 = array ([e,s,c])
m = min (v2)
for i in range (size (v2)):
   if (m == v2 [i]):
      h = i
if (h == 0):
   print ("estafilococo")
elif (h == 1):
   print ("salmonela")
elif (h == 2):
   print ("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-29 23:45:50) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t =array (g*inv (a))
e = sum (t[0,:])
s = sum (t [1,:])
c = sum (t [2,:])
print ("estafilococo:",e)
print ("salmonela:",s)
print ("coli:",c)
v2 = array ([e,s,c])
m = min (v2)
for i in range (size (v2)):
   if (m == v2 [i]):
      h = i
if (h == 0):
   print ("estafilococo")
elif (h == 1):
   print ("salmonela")
elif (h == 2):
   print ("coli")
-- EXECUTION TIME:
1.18334
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4200000000055
salmonela: 1864.4699999999993
coli: -439.01500000000124
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.049999999996
salmonela: 16783.399999999998
coli: 12183.554999999998
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.239999999998
salmonela: -9717.279999999999
coli: -6745.265
salmonela
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-29 23:46:03) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t =array (g*inv (a))
e = sum (t[0,:])
s = sum (t [1,:])
c = sum (t [2,:])
print ("estafilococo:",e)
print ("salmonela:",s)
print ("coli:",c)
v2 = array ([e,s,c])
m = min (v2)
for i in range (size (v2)):
   if (m == v2 [i]):
      h = i
if (h == 0):
   print ("estafilococo")
elif (h == 1):
   print ("salmonela")
elif (h == 2):
   print ("coli")
-- EXECUTION TIME:
1.06979
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4200000000055
salmonela: 1864.4699999999993
coli: -439.01500000000124
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.049999999996
salmonela: 16783.399999999998
coli: 12183.554999999998
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.239999999998
salmonela: -9717.279999999999
coli: -6745.265
salmonela
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-29 23:46:16) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t =array (g*inv (a))
e = sum (t[0,:])
s = sum (t [1,:])
c = sum (t [2,:])
print ("estafilococo:",e)
print ("salmonela:",s)
print ("coli:",c)
v2 = array ([e,s,c])
m = min (v2)
for i in range (size (v2)):
   if (m == v2 [i]):
      h = i
if (h == 0):
   print ("estafilococo")
elif (h == 1):
   print ("salmonela")
elif (h == 2):
   print ("coli")
-- EXECUTION TIME:
1.2577
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4200000000055
salmonela: 1864.4699999999993
coli: -439.01500000000124
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
Insira a qtd de alimento: estafilococo: -31711.049999999996
salmonela: 16783.399999999998
coli: 12183.554999999998
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
Insira a qtd de alimento: estafilococo: 22647.239999999998
salmonela: -9717.279999999999
coli: -6745.265
salmonela
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-29 23:46:22) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t =array (g*inv (a))
e = sum (t[0,:])
s = sum (t [1,:])
c = sum (t [2,:])
print ("estafilococo:",e)
print ("salmonela:",s)
print ("coli:",c)
v2 = array ([e,s,c])
m = min (v2)
for i in range (size (v2)):
   if (m == v2 [i]):
      h = i
if (h == 0):
   print ("estafilococo")
elif (h == 1):
   print ("salmonela")
elif (h == 2):
   print ("coli")
-- EXECUTION TIME:
0.827191
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4200000000055
salmonela: 1864.4699999999993
coli: -439.01500000000124
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.049999999996
salmonela: 16783.399999999998
coli: 12183.554999999998
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.239999999998
salmonela: -9717.279999999999
coli: -6745.265
salmonela
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-29 23:46:31) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],[1, 2, 0], [2, 3, 2]])
t =array (g*inv (a))
e = sum (t[0,:])
s = sum (t [1,:])
c = sum (t [2,:])
print ("estafilococo:",e)
print ("salmonela:",s)
print ("coli:",c)
v2 = array ([e,s,c])
m = min (v2)
for i in range (size (v2)):
   if (m == v2 [i]):
      h = i
if (h == 0):
   print ("estafilococo")
elif (h == 1):
   print ("salmonela")
elif (h == 2):
   print ("coli")
-- EXECUTION TIME:
1.05716
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4200000000055
salmonela: 1864.4699999999993
coli: -439.01500000000124
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.049999999996
salmonela: 16783.399999999998
coli: 12183.554999999998
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.239999999998
salmonela: -9717.279999999999
coli: -6745.265
salmonela
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 02:18:33) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],
				[1, 2, 0],
				[2, 3, 2]])
t = dot (a,g.T)
print (t )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 02:20:06) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],
				[1, 2, 0],
				[2, 3, 2]])
t = dot (inv (a),g.T)
print (t )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 02:20:55) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],
				[1, 2, 0],
				[2, 3, 2]])
t = array (dot (inv (a),g.T))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 02:21:36) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],
				[1, 2, 0],
				[2, 3, 2]])
t = array (dot (inv (a),g.T))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 02:22:11) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],
				[1, 2, 0],
				[2, 3, 2]])
t = array (dot (inv (a),g.T))
print (t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 02:22:26) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],
				[1, 2, 0],
				[2, 3, 2]])
t = array (dot (inv (a),g.T))
print (t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 02:28:09) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],
				[1, 2, 0],
				[2, 3, 2]])
t = array (dot (inv (a),g.T))
print ("estafilococo:",t [0])
print ("salmonela:",t [1])
print ("coli:",t [2])
m = min (t)
for i in range (size (t)):
   if (t [i] == m):
      m = i
if (m == 0):
   print ("estafilococo")
elif (m==1):
   print ("salmonela")
elif (m == 2):
   print ("coli")
-- EXECUTION TIME:
1.18803
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4200000000055
salmonela: 1864.4699999999993
coli: -439.01500000000124
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.049999999996
salmonela: 16783.399999999998
coli: 12183.554999999998
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.239999999998
salmonela: -9717.279999999999
coli: -6745.265
salmonela
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 02:28:16) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],
				[1, 2, 0],
				[2, 3, 2]])
t = array (dot (inv (a),g.T))
print ("estafilococo:",t [0])
print ("salmonela:",t [1])
print ("coli:",t [2])
m = min (t)
for i in range (size (t)):
   if (t [i] == m):
      m = i
if (m == 0):
   print ("estafilococo")
elif (m==1):
   print ("salmonela")
elif (m == 2):
   print ("coli")
-- EXECUTION TIME:
1.21756
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4200000000055
salmonela: 1864.4699999999993
coli: -439.01500000000124
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.049999999996
salmonela: 16783.399999999998
coli: 12183.554999999998
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.239999999998
salmonela: -9717.279999999999
coli: -6745.265
salmonela
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 02:28:31) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],
				[1, 2, 0],
				[2, 3, 2]])
t = array (dot (inv (a),g.T))
print ("estafilococo:",t [0])
print ("salmonela:",t [1])
print ("coli:",t [2])
m = min (t)
for i in range (size (t)):
   if (t [i] == m):
      m = i
if (m == 0):
   print ("estafilococo")
elif (m==1):
   print ("salmonela")
elif (m == 2):
   print ("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 02:30:33) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],
				[1, 2, 0],
				[2, 3, 2]])
t = array (dot (inv (a),g.T))
print ("estafilococo:",round (t [0],1))
print ("salmonela:",round (t [1],1))
print ("coli:",round (t [2]))
m = min (t)
for i in range (size (t)):
   if (t [i] == m):
      m = i
if (m == 0):
   print ("estafilococo")
elif (m==1):
   print ("salmonela")
elif (m == 2):
   print ("coli")
-- EXECUTION TIME:
1.16892
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12184.0
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.0
salmonela
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 02:30:49) 
-- CODE:
from numpy import *
from numpy.linalg import *

g = array(eval(input("Insira a qtd de alimento: ")))

a = array ([[2, 1, 4],
				[1, 2, 0],
				[2, 3, 2]])
t = array (dot (inv (a),g.T))
print ("estafilococo:",round (t [0],1))
print ("salmonela:",round (t [1],1))
print ("coli:",round (t [2],1))
m = min (t)
for i in range (size (t)):
   if (t [i] == m):
      m = i
if (m == 0):
   print ("estafilococo")
elif (m==1):
   print ("salmonela")
elif (m == 2):
   print ("coli")
-- EXECUTION TIME:
0.929017
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
salmonela
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
